--- a/Packages.html
+++ b/Packages.html
@@ -43,9 +43,16 @@
 
 </div>
 
-<!--_________________________________________________Side Nav For Packages________________________________________________________________--!>
 
-		<div id="ServNav" class="ServNav">
+<div class='page'>	
+<div class="content-area">
+
+<!--_________________________________________________Side Nav For Packages________________________________________________________________--!>
+	
+		<aside class="sidebar-area">
+		
+	
+		<div class="ServNav">
 			<a href="#Plat"> Web Development Package Platinum (E-Commerce)</a>
 			<a href="#Gold">  Web Development Package Gold </a>
 			<a href="#Silver">  Web Development Package Silver </a>
@@ -53,9 +60,13 @@
 			<a href="#Opt">  Web Optimization Package </a>
 			<a href="#Train"> Training Package </a>
 		</div>
+
+		</aside>
+
+	
 <!--____________________________________________________BODY_____________________________________________________________--!>
 
-<div class='page'>	
+<div class="site-main">
 
 	
 	<div class='section header'>	
@@ -64,10 +75,17 @@
 	</div>
 
 	<div class="section mobile-2">
+		
+		<img src="img/Keyboard.jpg" class="ServPic-L" alt="Blue Laptop">
 		Hickory Web Designs knows how hard you work for your money. Why would we make you
-		waste it just to get extra services? Not only do we offer sever pre-made packages
+		waste it just to get extra services? Not only do we offer several pre-made packages
 		for your convenience, we are always willing to create new custom packages to save you
 		time and ensure you get everything you need!
+
+		<br> <br>
+
+		Please email us at <a href="mailto:HickoryWebDesigns@Gmail.com">HickoryWebDesigns@Gmail.com</a>
+		for more information about custom packages. 
 
 	</div>
 
@@ -87,7 +105,7 @@
 		
 			<p> The premium package is an all inclusive deal designed to get you the best price on all your needs.
 			Websites are hand-coded, so you are not limited to generic layouts and designs. This package also
-			includes e-commerce functionality with adds a checkout cart function so customers can order online. </p>
+			includes e-commerce functionality which adds a checkout cart function so customers can order online. </p>
 			<ul>
 				<li> Web Design
 					<ul>
@@ -104,7 +122,7 @@
 				<li> 1 Year Web Hosting </li>
 			</ul>
 	
-		</div>
+	</div>
 
 
 <!--_____________________________________________________________________________________________________________________--!>
@@ -139,7 +157,7 @@
 				<li> 1 Year Application Maintenance </li>	
 			</ul>
 		
-		</div>
+	
 	</div>
 
 <!--_____________________________________________________________________________________________________________________--!>
@@ -176,7 +194,7 @@
 		
 		
 	
-		</div>
+	</div>
 	
 
 <!--_____________________________________________________________________________________________________________________--!>
@@ -205,7 +223,7 @@
 	
 			
 		
-		</div>
+	</div>
 		
 
 <!--_____________________________________________________________________________________________________________________--!>
@@ -214,9 +232,9 @@
 
 	<div class='section mobile-1'>
 
-	Get more out of your current website with our extended packages!
+		Get more out of your current website with our extended packages!
 	
-	<img src="img/Keyboard.jpg" class="DesktopPics" alt="Blue Laptop">
+		<img src="img/Keyboard.jpg" class="DesktopPics" alt="Blue Laptop">
 
 	</div>
 
@@ -240,7 +258,7 @@
 
 		
 
-		</div>
+	</div>
 
 
 <!--_____________________________________________________________________________________________________________________--!>
@@ -271,7 +289,7 @@
 		
 	
 
-		</div>
+	</div>
 
 
 
@@ -291,6 +309,9 @@
 		
 	<br/> <br/>
 
+</div>
+</div>
+
 	<footer>
 		<strong> Contact Us </strong>
 			<br/> <br/>
@@ -301,6 +322,6 @@
 		<strong> Request More Info </strong> <a href="ContactUs.html"> Here  </a>
 		
 	</footer>
-
+</div>
 	</body>
 	</html>
