--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 
 	</div>
 
+ 
+
+
 	<div class='section mobile-2'>
 	
 		<h3> Mobile First </h3>
@@ -107,7 +110,6 @@
 
 	</div>
 
- 
 	<div class='section header'>
 
 
@@ -140,8 +142,6 @@
 			<a href="Contact.html"> 
 			<img src="img/ContactLogo.png" class="SelectPic" alt="Contact Us"> </a>
 	</div>
-
-
 
 	<div class='section  mobile-3'>
 
@@ -177,6 +177,7 @@
 	</div>
 
 	<div class='section content'>
+			<div class="blank"> </div>
 
 			<h2> Office Professionals </h2>
 
@@ -186,6 +187,10 @@
 			staff on Microsoft Office productivity and presentation software, such as Word or Excel.
 
 			</p>
+			
+			<br> <br>
+			
+			<div class="blank"> </div>
 
 	</div>
 
