--- a/About.html
+++ b/About.html
@@ -75,6 +75,8 @@
 <!--______________________________________________________________________________________________________________________________--!>
 	
 	<div class='section content'>
+	
+	<div class="sep">  </div>
 
 	<h2> Web Designer </h2>
 
@@ -116,4 +118,17 @@
 
 	</body>
 	</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 		
