--- a/Packages.html
+++ b/Packages.html
@@ -91,7 +91,7 @@
 
 	<div class="section mobile-1">
 	
-		Everyone LOVES Discounts!
+		Pricing Coming Soon!
 
 	</div>
 
@@ -233,8 +233,9 @@
 	<div class='section mobile-1'>
 
 		Get more out of your current website with our extended packages!
+		<br> <br>
 	
-		<img src="img/Keyboard.jpg" class="DesktopPics" alt="Blue Laptop">
+		<img src="img/Opt.jpeg" class="DesktopPics" alt="Blue Laptop">
 
 	</div>
 
